# BarqHWMuSig

./: .gitignore  README.md  pyproject.toml
.cursor/rules/: coding.md  development_setup.md  python_best_practices.md  security.md  testing.md
config/: .env.dev  .env.example  test_key.pem
demo/: README.md  demo.py
docs/: prompt_plan.md  spec.md  todo.md  welcome.md
docs/guides/: contributing.md  developer_guide.md  user_guide.md
scripts/: setup.ps1  setup.sh
src/: __main__.py
src/bitcoin_transaction/: multisig_wallet.py  transaction_manager.py  transaction_signer.py
src/cli/: wallet_cli.py
src/common/: config_loader.py  logger.py
src/device_integration/: device_factory.py  hardware_device.py  ledger_device.py  yubikey_device.py
tests/: regtest_test.py
tests/unit/: __init__.py  test_config_loader.py  test_device_factory.py  test_ledger_device.py  test_logger.py  test_multisig_wallet.py  test_transaction_manager.py  test_transaction_signer.py  test_wallet_cli.py  test_yubikey_device.py
wallets/: demo_wallet.json
